--- a/index.html
+++ b/index.html
@@ -38,14 +38,30 @@
   <h2 id="message"></h2>
 
   <script>
-    function showMessage() {
-      const name = document.getElementById("nameInput").value.trim();
-      if (name) {
-        document.getElementById("message").textContent = `I always love you, ${name} ❤️`;
-      } else {
-        alert("Please enter your name!");
-      }
+  function showMessage() {
+    const nameInput = document.getElementById("nameInput");
+    const rawName = nameInput.value.trim();
+    const name = rawName.toLowerCase();
+    const messageEl = document.getElementById("message");
+
+    if (!name) {
+      alert("Please enter your name!");
+      return;
     }
-  </script>
+
+    const fatherNames = [
+      "pardeep",
+      "pardeep kumar",
+      "pardeep kumar jha"
+    ];
+
+    if (fatherNames.includes(name)) {
+      messageEl.textContent = "Shambhu always loves you, Pardeep Kumar Jha ❤️";
+    } else {
+      const formattedName = rawName.charAt(0).toUpperCase() + rawName.slice(1);
+      messageEl.textContent = `I always love you, ${formattedName} ❤️`;
+    }
+  }
+</script>
 </body>
 </html>
